Fixed infographics (paper airplane) on mobile.

--- a/src/css/fires-summary.css
+++ b/src/css/fires-summary.css
@@ -175,7 +175,7 @@ div.iconic-caption {
         width: 40px;
     }
     div.iconic-datum {
-        width: 3%;
+        width: 33%;
     }
 }
 
